k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: APP_NAME-prod
  labels:
    name: APP_NAME-prod
