k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME-service
  namespace: APP_NAME-prod
spec:
  selector:
    app: APP_NAME
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
